--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,13 @@
             "homepage": "https://github.com/webspilka/silvershop-api/graphs/contributors"
         }
     ],
+    "require": {
+        "php": ">=7.2.0",
+        "silverstripe/cms": "^4",
+        "silvershop/core": "^3"
+    },
     "require-dev": {
-        "phpunit/PHPUnit": "~4.8"
+        "phpunit/phpunit": "^5.7"
     },
     "prefer-stable": true
 }
